[project]
name = "document-processing-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "groq>=0.26.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "plotly>=6.1.2",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "python-levenshtein>=0.27.1",
    "streamlit>=1.45.1",
]
